tests/invalid_programs/types/main_with_string.duck
fn main() -> String {
    return "Hallo, Welt";
}
